// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitButtons Tests should match the snapshot 1`] = `
<div
  className="text-right col-10 offset-1 offset-md-0 py-3"
>
  <Button
    className="p-button-secondary mb-2 mb-sm-0"
    cornerStyleClass="ui-corner-all"
    icon={null}
    iconPos="left"
    id="cancelButton"
    label="cancel.en"
    onClick={[Function]}
    type="button"
  />
   
  <Button
    className="p-button-secondary mb-2 mb-sm-0"
    cornerStyleClass="ui-corner-all"
    icon={null}
    iconPos="left"
    id="saveButton"
    label="save.en"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`SubmitButtons Tests should match the snapshot with invisible cancel 1`] = `
<div
  className="text-right col-10 offset-1 offset-md-0 py-3"
>
   
  <Button
    className="p-button-secondary mb-2 mb-sm-0"
    cornerStyleClass="ui-corner-all"
    icon={null}
    iconPos="left"
    id="saveButton"
    label="save.en"
    onClick={[Function]}
    type="button"
  />
</div>
`;
